src/components/project.module.css
.project {
    display: flex;
    justify-content: space-between;
    align-items: center;
    margin-bottom: 100px;
}

.title {
    position: relative;
    margin-bottom: 5px;
}

.title:after {
    position: absolute;
    width: 100%;
    height: 1.5px;
    background: #6d435a;
    bottom: 0px;
    left: 0px;
    content: '';
}

.subtitle {
    margin-top: 0px;
    font-size: 2.2rem;
    font-style: italic;
}

.project:nth-child(2n) {
    text-align: right;
}

.project:nth-child(2n) .projectImage {
    order: 1;
}

.projectImage {
    flex: 1 0 50%;
    min-width: 400px;
}

.projectLinks {
    display: flex;
    justify-content: space-between;
}

@media (max-width: 800px) {
    .project {
        flex-direction: column;
    }
    .project:nth-child(2n) {
        text-align: left;
    }
    .projectImage {
        max-width: 600px;
    }
    .project:nth-child(2n) .projectImage {
        order: 0;
    }
}

